k8s/digitalocean/20-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: votehub
spec:
  type: ClusterIP
  selector:
    app: votehub-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
